[tool.poetry]
name = "bosdyn_spot"
version = "0.1.0"
description = ""
authors = ["Alisher A. Khassanov <a.khssnv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
datadog-checks-dev = {extras = ["cli"], version = "^17.1.1"}
bosdyn-client = "3.2.0"
click = "^8.1.3"
semver = "^2.13.0"
datadog-checks-base = "^27.4.1"
requests-unixsocket = "^0.3.0"
datadog = "^0.44.0"
binary = "^1.0.0"

[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools<61",
]
build-backend = "hatchling.build"

[project]
name = "datadog-bosdyn-spot"
description = "The bosdyn_spot check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "bosdyn_spot",
]
authors = [
    { name = "Alisher A. Khassanov", email = "alisher@merklebot.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=25.1.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-extras"

[tool.hatch.version]
path = "datadog_checks/bosdyn_spot/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/bosdyn_spot",
]
dev-mode-dirs = [
    ".",
]
